# muleshield-ai

./: .gitignore  AUDIT-REPORT.md  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.service
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
frontend/: index.html  package.json
frontend/src/: App.jsx
services/case-management/: main.py
services/decision-engine/: main.py
services/feature-store/: main.py
services/ingestion/: main.py
services/model-serving/: main.py
services/observability/: main.py
shared/core/database/: models.py  session.py
shared/core/middleware/: audit.py  rate_limiter.py
shared/core/security/: auth.py  crypto.py
shared/core/utils/: logging.py  redis_client.py
