[tool.poetry]
name = "muleshield-ai"
version = "1.0.0"
description = "MuleShield AI - FAANG-grade mule account fraud detection system for BOI CyberShield 2026"
authors = ["MuleShield AI Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
pydantic = ">=2.5.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.23"}
asyncpg = ">=0.29.0"
redis = ">=5.0.1"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = ">=0.0.6"
prometheus-client = ">=0.19.0"
slowapi = ">=0.1.9"
limits = ">=3.5.0"
cryptography = ">=41.0.0"
xgboost = ">=2.0.0"
lightgbm = ">=4.1.0"
shap = ">=0.43.0"
scikit-learn = ">=1.3.0"
numpy = ">=1.24.0"
pandas = ">=2.1.0"
reportlab = ">=4.0.0"
httpx = ">=0.25.0"
python-dotenv = ">=1.0.0"
structlog = ">=23.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
